Update step back prompting.ipynb

--- a/step back prompting.ipynb
+++ b/step back prompting.ipynb
@@ -186,7 +186,7 @@
    },
    "outputs": [],
    "source": [
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"""
    ]
   },
   {
